# Jayaang

./: ..env.swp  .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  recipients.example.csv  test-recipients-micro.csv  test-recipients-mini.csv  test-recipients-small.csv  test-recipients.csv
.github/workflows/: build-wasm.yml
contracts/: InjectiveMerkleAirdrop.sol
cosmwasm/: deployments.testnet.json
cosmwasm/inj-merkle-airdrop/: Cargo.toml
cosmwasm/inj-merkle-airdrop/.cargo/: config.toml
cosmwasm/inj-merkle-airdrop/src/: contract.rs  error.rs  lib.rs  merkle.rs  msg.rs  state.rs
merkle-output/: merkle.json
scripts/: address.js  build-cosmwasm.ps1  build-cosmwasm.sh  claim-only.js  deploy-cosmwasm.js  deploy.js  download-wasm.js  generate-merkle.js  migrate-cosmwasm.js  optimize-wasm.sh  test-e2e-cosmwasm.js  test-injective-account-parser.js
test-output/: merkle.json
web/: ..env.local.swp  .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.env.example
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/(app)/: layout.tsx
web/components/: ClaimAirdrop.tsx  CreateAirdrop.tsx  SetupStatus.tsx  WalletButton.tsx
web/hooks/: useClaimCampaign.ts  useCreateCampaign.ts  useDashboardStats.ts  useSetupStatus.ts
web/lib/: address.ts  bytes.ts  chain.ts  config.ts  cosmos.ts  injective-account.ts  injective-signing.ts  merkle-loader.ts  merkle-tree.ts  merkle.ts  publish-merkle.ts  utils.ts  wallet.tsx
web/public/: merkle-6.json
(+44 files in other folders)
