[package]
name = "inj-merkle-airdrop"
version = "0.1.0"
edition = "2021"
description = "Native INJ Merkle airdrop for Injective"

[lib]
crate-type = ["cdylib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.5", features = ["iterator"] }
cosmwasm-schema = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
sha3 = { version = "0.10", default-features = false }